# patient_care_system_using-agentic-ai

./: DEMO_CREDENTIALS.csv  DEMO_CREDENTIALS.md  Dockerfile  LICENSE  README.md  alert_router.py  app.py  check_app.py  check_db.py  check_patient.py  debug_discharged.py  debug_discharged2.py  debug_session.py  design_guidelines.md  docker-compose.n8n.yml  docker-compose.yml  import_all.py  init_db.py  main.py  models.py  n8n_workflows_main.json  patient_care_dev.db  predictive_analytics.py  pyproject.toml  raw_response.txt  read_template.py  report_scaling.py  requirements.txt  reset_and_seed.py  reset_staff_password.py  routes.py  run_analysis.py  run_flask.py  run_integration_test.py  run_local.py  save_response.py  simple_test.py  simple_test_client.py  start-docker-n8n.ps1  synthetic_data.py  (+12 more)
n8n/: README_n8n.md
n8n_workflows/: 00_main_orchestrator.json  01_active_alerts_poller.json  02_vitals_stream_poller.json  03_daily_risk_analysis.json  04_init_synthetic_data.json  05_discharged_chat_webhook.json  06_patient_chat_webhook.json  07_scripts_runner.json
scripts/: assign_patients.py  check_counts.py  check_discharged_ui.py  debug_discharged_rendering.py  debug_patient_detail.py  export_credentials.py  find_nulls.py  inspect_db.py  test_book_appointment.py  test_book_button.py  test_book_button_flow.py  test_booking_modal.py  test_discharged_endpoints.py  test_discharged_ui.py  test_fix.py  test_patient_detail.py  test_patient_endpoints.py  verify_patient_id.py
templates/: 403.html  404.html  add_note.html  add_treatment.html  base.html  credentials.html  (+14 more)
(+10 files in other folders)
