[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.1",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "google-generativeai>=0.3.0",
    "gunicorn>=23.0.0",
    "numpy>=2.3.5",
    "oauthlib>=3.3.1",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "werkzeug>=3.1.3",
]
